fix result align

--- a/src/App.css
+++ b/src/App.css
@@ -263,12 +263,22 @@ button {
 
 .result{
   display: flex;
-  position: absolute;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
+  position: absolute;
   width: 100%;
   height: 75%;
+}
 
+.result-box{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  position: absolute;
+  justify-content: space-between;
+  width: 90%;
+  background-color:rgb(255, 244, 228)
 }
 
 .bar-chart{
